...
        key: _formKey,
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.stretch,
          children: [
            SizedBox(height: MediaQuery.of(context).size.height * 0.05),
            const Text(
              'Join Hydracat',
              style: AppTextStyles.h1,
              textAlign: TextAlign.center,
            ),
            const SizedBox(height: AppSpacing.sm),
            const Text(
              "Start tracking your cat's kidney treatment with care",
...
            ),
            const SizedBox(height: AppSpacing.md),
            Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                const Text(
                  'Confirm Password',
                  style: AppTextStyles.body,
                ),
                const SizedBox(height: AppSpacing.sm),
                HydraTextFormField(
                  controller: _confirmPasswordController,
                  obscureText: _obscureConfirmPassword,
...
